[metadata]
name = creditutils-liuzhy
version = 0.2.6b1.dev1
author = liuzhy
author_email = liuzhy@txxy.com
description = python small tools util.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytxxy/creditutils
project_urls =
    Bug Tracker = https://github.com/pytxxy/creditutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src