[metadata]
name = creditutils
version = 0.2.9b1.dev1
author = liuzhy
author_email = liuzhy@txxy.com
description = python small tools util.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytxxy/creditutils
project_urls =
    Bug Tracker = https://github.com/pytxxy/creditutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    paramiko>=3.3.1
    xmltodict>=0.11.0
    chardet>=3.0.4
    xlrd>=1.1.0
    pypng>=0.0.18
    GitPython>=3.1.11
    Pillow>=6.0.0

[options.packages.find]
where = src